--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
       - "v*.*.*"
 
 jobs:
-  module-open:
+  release:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,50 +19,22 @@ jobs:
         with:
           node-version: 16
 
-      - name: Install wine
-        run: sudo apt install wine wine64
-
       - name: Build
         run: |
           yarn
-          yarn build:x64
-          cp node_modules/open/xdg-open ./build/linux-x64/open/xdg-open
+          yarn build
 
-      - name: Artefact Macos x64
+      - name: Artefact
         uses: actions/upload-artifact@v2
         with:
-          name: Open MacOS x64
-          path: ./build/macos-x64
+          name: Module Open
+          path: ./dist/
 
-      - name: Artefact Linux x64
-        uses: actions/upload-artifact@v2
-        with:
-          name: Open Linux x64
-          path: ./build/linux-x64
-
-      - name: Artefact Win x64
-        uses: actions/upload-artifact@v2
-        with:
-          name: Open Windows x64
-          path: ./build/win-x64
-
-      - name: Pack Linux x64
+      - name: Pack
         if: startsWith(github.ref, 'refs/tags/')
         run: |
-          cd build/linux-x64
-          npx bestzip ../../open-linux-x64.zip .
-
-      - name: Pack Win x64
-        if: startsWith(github.ref, 'refs/tags/')
-        run: |
-          cd build/win-x64
-          npx bestzip ../../open-win-x64.zip .
-
-      - name: Pack MacOS x64
-        if: startsWith(github.ref, 'refs/tags/')
-        run: |
-          cd build/macos-x64
-          npx bestzip ../../open-macos-x64.zip .
+          cd ./dist/
+          npx bestzip ../module-open.zip .
 
       - name: Release
         uses: softprops/action-gh-release@v1
