Add @evntboard/evntcom-node dep

--- a/module/package.json
+++ b/module/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/EvntBoard/module-open#readme",
   "dependencies": {
-    "evntcom-js": "https://github.com/EvntBoard/evntcom-js.git",
+    "@evntboard/evntcom-node": "https://github.com/EvntBoard/evntcom-node.git",
     "open": "^8.4.0"
   },
   "devDependencies": {
