--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Module OPEN
+name: Module Twitch
 
 on:
   workflow_dispatch:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
       - name: Check out Git repository
@@ -17,52 +17,50 @@ jobs:
       - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v1
         with:
-          node-version: 14
+          node-version: 16
 
       - id: get_version
         uses: battila7/get-version-action@v2
 
-      - name: Prepare dist
-        run: mkdir ./dist
-
-      - name: Copy metadata.json
+      - name: Install wine
+        shell: bash
         run: |
-          cp ./metadata.json ./dist/metadata.json
+          sudo dpkg --add-architecture i386
+          wget -nc https://dl.winehq.org/wine-builds/winehq.key
+          sudo apt-key add winehq.key
+          sudo apt-add-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ bionic main'
+          sudo apt update
+          sudo apt install --install-recommends winehq-stable
 
-      - name: Copy config.json
+      - name: Build
+        shell: bash
         run: |
-          cp ./config.json ./dist/config.json
-
-      - name: Populate metadata.json __MODULE_REPO__
-        uses: jacobtomlinson/gha-find-replace@v2
-        with:
-          find: "__MODULE_REPO__"
-          replace: ${{ github.repository }}
-          regex: false
-
-      - name: Populate metadata.json __MODULE_VERSION__
-        uses: jacobtomlinson/gha-find-replace@v2
-        with:
-          find: "__MODULE_VERSION__"
-          replace: ${{ steps.get_version.outputs.version }}
-          regex: false
-
-      - name: Build module
-        run: |
-          cd module
           yarn
           yarn build
 
-      - name: Copy module
+      - name: Build & Pack Linux x64
+        shell: bash
         run: |
-          mkdir ./dist/module
-          cp -a ./module/build/. ./dist/module
+          yarn build:x64:linux
+          mv ./build/linux-x64/module-twitch ./build/linux-x64/${{ github.event.repository.name }}-linux-x64-${{ steps.get_version.outputs.version }}
+          cd ./build/linux-x64/
+          npx bestzip ../${{ github.event.repository.name }}-linux-x64-${{ steps.get_version.outputs.version }}.zip .
 
-      - name: Pack
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: Build & Pack Win x64
+        shell: bash
         run: |
-          cd ./dist/
-          npx bestzip ../${{ github.event.repository.name }}-${{ steps.get_version.outputs.version }}.zip .
+          yarn build:x64:win
+          mv ./build/win-x64/module-twitch.exe ./build/win-x64/${{ github.event.repository.name }}-win-x64-${{ steps.get_version.outputs.version }}.exe
+          cd ./build/win-x64/
+          npx bestzip ../${{ github.event.repository.name }}-win-x64-${{ steps.get_version.outputs.version }}.zip .
+
+      - name: Build & Pack Macos x64
+        shell: bash
+        run: |
+          yarn build:x64:macos
+          mv ./build/macos-x64/module-twitch ./build/macos-x64/${{ github.event.repository.name }}-macos-x64-${{ steps.get_version.outputs.version }}
+          cd ./build/macos-x64/
+          npx bestzip ../${{ github.event.repository.name }}-macos-x64-${{ steps.get_version.outputs.version }}.zip .
 
       - name: Release
         uses: softprops/action-gh-release@v1
@@ -70,4 +68,25 @@ jobs:
         with:
           draft: true
           files: |
-            *.zip
+            ./build/*.zip
+
+      - name: Artifact Linux x64
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ github.event.repository.name }}-linux-x64-${{ steps.get_version.outputs.version }}
+          path: ./build/linux-x64
+          retention-days: 1
+
+      - name: Artifact Win x64
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ github.event.repository.name }}-win-x64-${{ steps.get_version.outputs.version }}
+          path: ./build/win-x64
+          retention-days: 1
+
+      - name: Artifact Macos x64
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ github.event.repository.name }}-macos-x64-${{ steps.get_version.outputs.version }}
+          path: ./build/macos-x64
+          retention-days: 1
